bindings/python/hydra/_hydra_ctypes.py

################################################################################
#  THIS FILE IS 100% GENERATED BY ZPROJECT; DO NOT EDIT EXCEPT EXPERIMENTALLY  #
#  Read the zproject/README.md for information about making permanent changes. #
################################################################################

from __future__ import print_function
import os, sys
from ctypes import *
from ctypes.util import find_library
import czmq

# load libc to access free, etc.
libcpath = find_library("c")
if not libcpath:
    raise ImportError("Unable to find libc")
libc = cdll.LoadLibrary(libcpath)
libc.free.argtypes = [c_void_p]
libc.free.restype = None

def return_fresh_string(char_p):
    s = string_at(char_p)
    libc.free(char_p)
    return s

# hydra
lib = None
# check to see if the shared object was embedded locally, attempt to load it
# if not, try to load it using the default system paths...
# we need to use os.chdir instead of trying to modify $LD_LIBRARY_PATH and reloading the interpreter
t = os.getcwd()
p = os.path.join(os.path.dirname(__file__), '..')  # find the path to our $project_ctypes.py
os.chdir(p)  # change directories briefly

try:
    from hydra import libhydra                      # attempt to import the shared lib if it exists
    lib = CDLL(libhydra.__file__)            # if it exists try to load the shared lib
except ImportError:
    pass
finally:
    os.chdir(t)  # switch back to orig dir

if not lib:
    try:
        # If LD_LIBRARY_PATH or your OSs equivalent is set, this is the only way to
        # load the library.  If we use find_library below, we get the wrong result.
        if os.name == 'posix':
            if sys.platform == 'darwin':
                lib = cdll.LoadLibrary('libhydra.0.dylib')
            else:
                lib = cdll.LoadLibrary("libhydra.so.0")
        elif os.name == 'nt':
            lib = cdll.LoadLibrary('libhydra.dll')
    except OSError:
        libpath = find_library("hydra")
        if not libpath:
            raise ImportError("Unable to find libhydra")
        lib = cdll.LoadLibrary(libpath)

class hydra_t(Structure):
    pass # Empty - only for type checking
hydra_p = POINTER(hydra_t)

class hydra_post_t(Structure):
    pass # Empty - only for type checking
hydra_post_p = POINTER(hydra_post_t)

class hydra_proto_t(Structure):
    pass # Empty - only for type checking
hydra_proto_p = POINTER(hydra_proto_t)

class hydra_ledger_t(Structure):
    pass # Empty - only for type checking
hydra_ledger_p = POINTER(hydra_ledger_t)


# hydra
lib.hydra_new.restype = hydra_p
lib.hydra_new.argtypes = [c_char_p]
lib.hydra_destroy.restype = None
lib.hydra_destroy.argtypes = [POINTER(hydra_p)]
lib.hydra_set_nickname.restype = None
lib.hydra_set_nickname.argtypes = [hydra_p, c_char_p]
lib.hydra_nickname.restype = c_char_p
lib.hydra_nickname.argtypes = [hydra_p]
lib.hydra_set_animate.restype = None
lib.hydra_set_animate.argtypes = [hydra_p]
lib.hydra_set_verbose.restype = None
lib.hydra_set_verbose.argtypes = [hydra_p]
lib.hydra_set_local_ipc.restype = None
lib.hydra_set_local_ipc.argtypes = [hydra_p]
lib.hydra_set_hostname.restype = None
lib.hydra_set_hostname.argtypes = [hydra_p, c_char_p]
lib.hydra_start.restype = c_int
lib.hydra_start.argtypes = [hydra_p]
lib.hydra_fetch.restype = hydra_post_p
lib.hydra_fetch.argtypes = [hydra_p]
lib.hydra_store_string.restype = POINTER(c_char)
lib.hydra_store_string.argtypes = [hydra_p, c_char_p, c_char_p, c_char_p, c_char_p]
lib.hydra_store_file.restype = POINTER(c_char)
lib.hydra_store_file.argtypes = [hydra_p, c_char_p, c_char_p, c_char_p, c_char_p]
lib.hydra_store_chunk.restype = POINTER(c_char)
lib.hydra_store_chunk.argtypes = [hydra_p, c_char_p, c_char_p, c_char_p, czmq.zchunk_p]
lib.hydra_version.restype = None
lib.hydra_version.argtypes = [POINTER(c_int), POINTER(c_int), POINTER(c_int)]
lib.hydra_test.restype = None
lib.hydra_test.argtypes = [c_bool]

class Hydra(object):
    """
    Main Hydra API
    """

    allow_destruct = False
    def __init__(self, *args):
        """
        Constructor, creates a new Hydra node. Note that until you start the
node it is silent and invisible to other nodes on the network. You may
specify the working directory, which defaults to .hydra in the current
working directory. Creates the working directory if necessary.
        """
        if len(args) == 2 and type(args[0]) is c_void_p and isinstance(args[1], bool):
            self._as_parameter_ = cast(args[0], hydra_p) # Conversion from raw type to binding
            self.allow_destruct = args[1] # This is a 'fresh' value, owned by us
        elif len(args) == 2 and type(args[0]) is hydra_p and isinstance(args[1], bool):
            self._as_parameter_ = args[0] # Conversion from raw type to binding
            self.allow_destruct = args[1] # This is a 'fresh' value, owned by us
        else:
            assert(len(args) == 1)
            self._as_parameter_ = lib.hydra_new(args[0]) # Creation of new raw type
            self.allow_destruct = True

    def __del__(self):
        """
        Destructor, destroys a Hydra node. When you destroy a node, any posts
it is sending or receiving will be discarded.
        """
        if self.allow_destruct:
            lib.hydra_destroy(byref(self._as_parameter_))

    def __eq__(self, other):
        if type(other) == type(self):
            return other.c_address() == self.c_address()
        elif type(other) == c_void_p:
            return other.value == self.c_address()

    def c_address(self):
        """
        Return the address of the object pointer in c.  Useful for comparison.
        """
        return addressof(self._as_parameter_.contents)

    def __bool__(self):
        "Determine whether the object is valid by converting to boolean" # Python 3
        return self._as_parameter_.__bool__()

    def __nonzero__(self):
        "Determine whether the object is valid by converting to boolean" # Python 2
        return self._as_parameter_.__nonzero__()

    def set_nickname(self, nickname):
        """
        Set node nickname; this is saved persistently in the Hydra configuration
file.
        """
        return lib.hydra_set_nickname(self._as_parameter_, nickname)

    def nickname(self):
        """
        Return our node nickname, as previously stored in hydra.cfg, or set by
the hydra_set_nickname() method. Caller must free returned string using
zstr_free ().
        """
        return lib.hydra_nickname(self._as_parameter_)

    def set_animate(self):
        """
        Set the trace level to animation of main actors; this is helpful to
debug the Hydra protocol flow.
        """
        return lib.hydra_set_animate(self._as_parameter_)

    def set_verbose(self):
        """
        Set the trace level to animation of all actors including those used in
security and discovery. Use this to collect diagnostic logs.
        """
        return lib.hydra_set_verbose(self._as_parameter_)

    def set_local_ipc(self):
        """
        By default, Hydra needs a network interface capable of broadcast UDP
traffic, e.g. WiFi or LAN interface. To run nodes on a stand-alone PC,
set the local IPC option. The node will then do gossip discovery over
IPC. Gossip discovery needs at exactly one node to be running in a
directory called ".hydra".
        """
        return lib.hydra_set_local_ipc(self._as_parameter_)

    def set_hostname(self, hostname):
        """
        By default, Hydra uses your hostname via zbeacon. Use this function to
set some other hostname. Useful when using VMs, containers, etc.
        """
        return lib.hydra_set_hostname(self._as_parameter_, hostname)

    def start(self):
        """
        Start node. When you start a node it begins discovery and post exchange.
Returns 0 if OK, -1 if it wasn't possible to start the node.
        """
        return lib.hydra_start(self._as_parameter_)

    def fetch(self):
        """
        Return next available post, if any. Does not block. If there are no posts
waiting, returns NULL. The caller can read the post using the hydra_post
API, and must destroy the post when done with it.
        """
        return HydraPost(lib.hydra_fetch(self._as_parameter_), True)

    def store_string(self, subject, parent_id, mime_type, content):
        """
        Store a new post provided as a null-terminated string. Returns post ID for
the newly created post, or NULL if it was impossible to store the post.
Caller must free post ID when finished with it.
        """
        return return_fresh_string(lib.hydra_store_string(self._as_parameter_, subject, parent_id, mime_type, content))

    def store_file(self, subject, parent_id, mime_type, filename):
        """
        Store a new post located in a file somewhere on disk. Returns post ID for
the newly created post, or NULL if it was impossible to store the post.
Caller must free post ID when finished with it.
        """
        return return_fresh_string(lib.hydra_store_file(self._as_parameter_, subject, parent_id, mime_type, filename))

    def store_chunk(self, subject, parent_id, mime_type, chunk):
        """
        Store a new post provided as a chunk of data. Returns post ID for
the newly created post, or NULL if it was impossible to store the post.
Caller must free post ID when finished with it.
        """
        return return_fresh_string(lib.hydra_store_chunk(self._as_parameter_, subject, parent_id, mime_type, chunk))

    @staticmethod
    def version(major, minor, patch):
        """
        Return the Hydra version for run-time API detection
        """
        return lib.hydra_version(byref(c_int.from_param(major)), byref(c_int.from_param(minor)), byref(c_int.from_param(patch)))

    @staticmethod
    def test(verbose):
        """
        Self test of this class
        """
        return lib.hydra_test(verbose)

